# memory-classification-engine

./: .flake8  .git-commit-rules.md  .gitignore  .pre-commit-config.yaml  CARRYMEM_OPTIMIZATION_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  GIT_FILES_ANALYSIS.md  GIT_STRATEGY.md  LICENSE  MANIFEST.in  MCE_MODEL_STATUS.md  Makefile  OPTIMIZATION_PLAN.md  README-CN.md  README-EN.md  README-JP.md  README-ZH.md  README.md  REFACTORING_SUMMARY.md  RELEASE_NOTES_v0.1.2.md  ROADMAP-CN.md  ROADMAP-JP.md  ROADMAP-ZH.md  ROADMAP.md  USER_PERSPECTIVE_REVIEW.md  coverage.xml  install.sh  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  start_mcp.sh  start_mcp_offline.py  start_mcp_server.sh  test_api.py  test_conflict_detection.py  test_export.json  test_sdk.py  (+3 more)
backup/: CONTRIBUTING.md  README.md  requirements.txt  setup.py
benchmarks/: baseline_benchmark.py  baseline_results.json  classification_accuracy.py  final_results.json  leaderboard.py  performance_benchmark.py  run_benchmark.py
config/: access_control.json  advanced_rules.json  config.yaml  data_processing_records.json  encryption_keys.json  mcp_config.json  rules.yaml
dashboard/: index.html
demo/: demo.cast  demo_gif.py  demo_gif_no_input.py  demo_gif_ready.py  demo_mce.py  demo_memory_recall.py  demo_quick.py  demo_simple.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  BETA_TESTING_GUIDE_EN.md  BETA_TESTING_GUIDE_ZH.md  CLI_ENHANCEMENTS_GUIDE.md  DEVELOPMENT_MODIFICATION_PLAN.md  DEVELOPMENT_MODIFICATION_PLAN_V2.md  DOCUMENTATION_UPDATES.md  FEATURE_IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  OPTIMIZATION_RECOMMENDATIONS.md  PROJECT_REVIEW_2026-04-26.md  QUICK_FIX_GUIDE.md  QUICK_START_GUIDE.md  README.md  RELEASE_PREP_PLAN_V1.md  ROADMAP.md  TESTING_GUIDE.md  TEST_PLAN.md  TROUBLESHOOTING.md  USER_READINESS_ASSESSMENT.md  USER_STORIES.md  api.md  claude_code_mcp_config.md  code_quality_fixes.md  code_review_checklist.md  design-jp.md  design-zh.md  design.md  mce_cross_session_memory_design.md  phase2_design.md  phase2_requirements.md  phase3_design.md  phase3_requirements.md  phase4_design.md  phase4_requirements.md  phase5_design.md  phase5_requirements.md  requirements.md
examples/: basic_usage.py  community_feedback_example.py  (+3 more)
(+320 files in other folders)
